--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1052,7 +1052,7 @@ input, select, textarea {
 		  
 		  .headerTemp {
 			height: 20%;
-			background-color: purple;
+			background-color:#b69dff;
 			border-top-left-radius: 25px;
 			border-top-right-radius: 25px;
 			text-align: center;
@@ -1063,7 +1063,7 @@ input, select, textarea {
 			font-family: "Courier New";
 			font-weight: bold;
 			font-size: 60px;
-			color: #fff;
+			color: black;
 			position: absolute;
 			left: 50%;
 			top: 50%;
@@ -1084,7 +1084,7 @@ input, select, textarea {
 			font-family: "Courier New";
 			font-size: 30px;
 			font-weight: bold;
-			color: red;
+			color: maroon;
 		  }
 		  
 		  #icon {
@@ -1101,7 +1101,7 @@ input, select, textarea {
 			height: 80%;
 			width: 50%;
 			border-bottom-left-radius: 25px;
-			background-color: wheat;
+			background-color: gold;
 		  }
 		  
 		  .temperature {
@@ -1110,7 +1110,7 @@ input, select, textarea {
 			top:0%;
 			height: 40%;
 			width: 50%;
-			background-color:silver;
+			background-color:greenyellow;
 		  }
 		  
 		  .humidity {
@@ -1126,12 +1126,12 @@ input, select, textarea {
 		  #search-btn {
 			width: 40px;
 			height:40px;
-			color: #eee;
+			color: black;
 			padding: 5px;
 		  }
 		  
 		  #search-txt {
-			color: red;
+			color: maroon;
 			height:30px;
 			border-radius: 10px;
 			border-style:none;
